# just4mcps

./: .gitignore  LICENSE  README.md
k8s/mcp-gateway/frontend/: deployment.yaml  service.yaml
k8s/namespace/: namespace.yaml
k8s/proxy/: deployment.yaml  ingressroute.yaml  secrets.example.yaml
k8s/surrealdb/: deployment.yaml  pvc.yaml  secrets.example.yaml  service.yaml
mcp-gateway/: .gitignore  compose.yml
mcp-gateway/backend/: .env.example  Dockerfile  pyproject.toml
mcp-gateway/backend/app/: config.py  main.py
mcp-gateway/backend/app/admin/: connector.py  credentials.py  mcps.py  permissions.py  router.py
mcp-gateway/backend/app/auth/: dependencies.py  keycloak.py  router.py
mcp-gateway/backend/app/db/: client.py  queries.py
mcp-gateway/backend/app/gateway/: proxy.py  router.py  upstream.py
mcp-gateway/backend/app/security/: credentials.py
mcp-gateway/frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
mcp-gateway/frontend/src/: App.css  index.css  main.tsx
mcp-gateway/frontend/src/components/: Layout.tsx  StatusDot.tsx
mcp-gateway/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx
mcp-gateway/frontend/src/lib/: api.ts  auth.ts  keycloak.ts  theme.ts
mcp-gateway/frontend/src/pages/: CallbackPage.tsx  DashboardPage.tsx  GroupsPage.tsx  LoginPage.tsx  MCPDetailPage.tsx  MCPListPage.tsx
